<resources>
    <string name="app_name">Authoriti</string>

    <string name="menu_code_generate">Generate Permission code™ authorization</string>
    <string name="menu_polling">Check Permission Code™ Requests</string>
    <string name="menu_scan_populate">Scan Populate</string>
    <string name="menu_account">Manage My IDs</string>
    <string name="menu_export">Transfer Wallet to New Device</string>
    <string name="menu_change_pwd">Settings</string>
    <string name="menu_wipe">About Us</string>
    <string name="menu_logOut">Logout</string>

    <!-- Fonts -->
    <string name="font_iA_bold">fonts/iAWriterDuospace_Bold.ttf</string>
    <string name="font_iA_bold_italic">fonts/iAWriterDuospace_BoldItalic.ttf</string>
    <string name="font_iA_regular">fonts/iAWriterDuospace_Regular.ttf</string>
    <string name="font_iA_regular_italic">fonts/iAWriterDuospace_RegularItalic.ttf</string>
    <string name="font_oswaldo_bold">fonts/Oswald_Bold.ttf</string>
    <string name="font_oswaldo_light">fonts/Oswald_Light.ttf</string>
    <string name="font_oswaldo_medium">fonts/Oswald_Medium.ttf</string>
    <string name="font_oswaldo_regular">fonts/Oswald_Regular.ttf</string>
    <string name="title_touch_id">Fingerprint for \"Authoriti\"</string>

    <string name="text_about">Authoriti is an innovation of CTM Insights. CTM is an early stage technology studio and incubator, focused on finding new approaches to structural problems in cyber security.  We have significant leadership experience dealing with InfoSec at-scale at the world\'s leading financial institutions.

Authoriti is the developer of the Authoriti Permission Code™, which gives institutions the confidence that financial transactions are authorized.</string>
    <string name="txt_add_account">To complete sign up, you need to add at least one ID to your wallet. \n Please click \"Add\" on top right.</string>
    <string name="hold_steady">HOLD STEADY</string>
    <string name="align_and_tap">ALIGN AND TAP</string>
    <string name="swipe_change_msg">Click to change, or swipe left or right to set as default</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="export_wallet_to_new_device">Export Wallet to New Device</string>
    <string name="change_password">Change Password</string>
    <string name="wipe_all_data_warning_can_not_be_undo">Wipe All Data (warning: can not be undone)</string>

</resources>
