<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        fontPath="@string/font_oswaldo_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="About Us"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="121dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo_blue" />

    <android.support.v7.widget.AppCompatTextView
        fontPath="@string/font_oswaldo_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/text_about"
        android:textAlignment="center"
        android:textColor="#AAAAAA"
        android:textSize="15sp"
        tools:ignore="MissingPrefix" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        fontPath="@string/font_oswaldo_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="Version"
        android:textColor="#465156"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvExport"
            fontPath="@string/font_oswaldo_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="EXPORT WALLET"
            android:textColor="#465156"
            android:textSize="18dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvWipe"
            fontPath="@string/font_oswaldo_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvExport"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="WIPE"
            android:textColor="#465156"
            android:textSize="18dp" />


    </RelativeLayout>

</LinearLayout>