<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="32dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                fontPath="@string/font_oswaldo_regular"
                android:textSize="18sp"/>


            <ImageButton
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="8dp"
                android:tint="@android:color/white"
                android:src="@drawable/ic_close"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingTop="16dp"
            android:text="YOUR PERMISSION CODE"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/colorTextPrimary"
            fontPath="@string/font_oswaldo_regular"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="LOREM IPSUM DOLOR SIT AMET, CONSECTETUR"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorTextSecondary"
            fontPath="@string/font_oswaldo_regular"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="32dp">


            <android.support.v7.widget.CardView
                android:id="@+id/cvWipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="gFR4QHfVHw"
                        android:textSize="30sp"
                        fontPath="@string/font_iA_bold"
                        android:textColor="@color/colorTextThird"/>

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/bg_qr_code"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cvGotIt"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="2"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/colorTextThird"
                card_view:cardCornerRadius="2.5dp"
                card_view:cardElevation="2.5dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="GOT IT"
                    android:textSize="16sp"
                    fontPath="@string/font_oswaldo_medium"
                    android:textColor="@android:color/white"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>