<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_centerVertical="true"
            android:tint="@android:color/white"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            fontPath="@string/font_oswaldo_regular"
            android:textSize="18sp"/>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="CREATE AUTHORITI PERMISSION CODE ™"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    fontPath="@string/font_oswaldo_light"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Click to change the setting or swipe left or right to set as default"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="13sp"
                    android:textColor="@color/colorTextPrimary"
                    fontPath="@string/font_oswaldo_light"
                    tools:ignore="MissingPrefix" />

                <LinearLayout
                    android:id="@+id/codeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tiCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:errorEnabled="true"
                        fontPath="@string/font_oswaldo_regular"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/etCode"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:backgroundTint="@color/colorPrimary"
                            android:textCursorDrawable="@color/colorPrimary"
                            android:hint="Enter the Code Provided by the Company You wish to Grant Access"
                            android:textSize="12sp"
                            fontPath="@string/font_oswaldo_regular"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/cvGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Generate Permission Code"
            android:textSize="18sp"
            fontPath="@string/font_oswaldo_light"
            android:textAllCaps="true"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.CardView>


</LinearLayout>