<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_account_confirm_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#EAEAEC"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_header"
            fontPath="@string/font_oswaldo_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="sddsds"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/ivSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:src="@drawable/icon_refresh"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/lin_add_self_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@+id/ivSync"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_add"
                        fontPath="@string/font_oswaldo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Add ID"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/iv_add_self"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/txt_add"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add"
                        android:tint="@color/colorPrimary" />
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.daimajia.swipe.SwipeLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:clickToClose="true"
            app:drag_edge="right">

            <TextView
                android:id="@+id/tvDelete"
                fontPath="@string/font_oswaldo_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_dark"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Delete"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    fontPath="@string/font_oswaldo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:text="AccountId"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    fontPath="@string/font_oswaldo_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    tools:ignore="MissingPrefix" />


                <View
                    android:id="@+id/markDefault"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_green_dot"
                    android:visibility="gone" />

            </LinearLayout>
        </com.daimajia.swipe.SwipeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E5E5" />

    </LinearLayout>


</LinearLayout>
